[package]
name = "aahc"
version = "0.1.0"
authors = ["Christopher Head"]
edition = "2024"
rust-version = "1.85"
resolver = "2"
description = "Asynchronous, zero-allocation HTTP client that is agnostic to choice of executor"
repository = "https://gitlab.com/Hawk777/aahc"
readme = "README.md"
keywords = ["async", "client", "http"]
categories = ["asynchronous", "network-programming", "web-programming::http-client"]
license = "GPL-3.0-only"

[features]
default = ["detailed-errors"]
detailed-errors = []

[dependencies.futures-core]
version = "^0.3"

[dependencies.futures-io]
version = "^0.3"

[dependencies.httparse]
version = "^1"

[dev-dependencies.async-compat]
version = "^0.2"

[dev-dependencies.futures-executor]
version = "^0.3"

[dev-dependencies.tokio]
version = "^1"
features = ["io-util", "net"]
