[package]
name = "aahc"
version = "0.1.1"
authors = ["Christopher Head"]
edition = "2024"
rust-version = "1.85"
resolver = "2"
description = "Asynchronous, zero-allocation HTTP client that is agnostic to choice of executor"
repository = "https://gitlab.com/Hawk777/aahc"
readme = "README.md"
keywords = ["async", "client", "http"]
categories = ["asynchronous", "network-programming", "web-programming::http-client"]
license = "GPL-3.0-only"

[features]
default = ["detailed-errors"]
detailed-errors = []

[dependencies.futures-core]
version = "^0.3"

[dependencies.futures-io]
version = "^0.3"

[dependencies.httparse]
version = "^1"

[dev-dependencies.async-compat]
version = "^0.2"

[dev-dependencies.futures-executor]
version = "^0.3"

[dev-dependencies.tokio]
version = "^1"
features = ["io-util", "net"]

[lints.clippy]
# General lint groups to enable.
cargo = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Disabled because we frequently mix u64 and usize, where the former is used
# for message body lengths and the latter for in-memory buffer sizes.
cast_possible_truncation = "allow"
# Disabled due to <https://github.com/rust-lang/rust-clippy/issues/7271>.
needless_lifetimes = "allow"
# Disabled due to personal preference.
redundant_else = "allow"
tabs_in_doc_comments = "allow"
# Additional specific lints to enable.
allow_attributes_without_reason = "deny"
deref_by_slicing = "warn"
doc_include_without_cfg = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
exit = "deny"
get_unwrap = "warn"
host_endian_bytes = "warn"
if_then_some_else_none = "warn"
infinite_loop = "warn"
lossy_float_literal = "warn"
map_err_ignore = "warn"
map_with_unused_argument_over_ranges = "warn"
mod_module_files = "warn"
module_name_repetitions = "warn"
multiple_inherent_impl = "warn"
needless_raw_strings = "warn"
non_zero_suggestions = "warn"
print_stderr = "warn"
print_stdout = "warn"
pub_without_shorthand = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
redundant_test_prefix = "warn"
redundant_type_annotations = "warn"
renamed_function_params = "warn"
rest_pat_in_fully_bound_structs = "warn"
return_and_then = "warn"
same_name_method = "warn"
string_lit_chars_any = "warn"
str_to_string = "warn"
tests_outside_test_module = "warn"
todo = "warn"
try_err = "warn"
unimplemented = "warn"
unneeded_field_pattern = "warn"
unseparated_literal_suffix = "warn"
unused_trait_names = "warn"

[lints.rust]
# General lint groups to enable.
rust_2018_idioms = { level = "warn", priority = -1 }
unused = { level = "warn", priority = -1 }
# Additional specific lints to enable.
ambiguous_negative_literals = "warn"
closure_returning_async_block = "warn"
meta_variable_misuse = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
single_use_lifetimes = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unit_bindings = "warn"
unreachable_pub = "warn"
unsafe_code = "forbid"
unused_crate_dependencies = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
unused_results = "warn"
variant_size_differences = "warn"

[lints.rustdoc]
all = "warn"
